--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "core-js": "^3.25.0",
+    "normalize-css": "^2.3.1",
     "regenerator-runtime": "^0.13.9"
   }
 }
